# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yaml
configuration/: base.yaml  production.yaml
deployment/: postgres-cluster.yaml
deployment/zero2prod/: Chart.yaml  values.yaml
deployment/zero2prod/templates/: NOTES.txt  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  serviceaccount.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
