[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
chrono = {version = "0.4.42", default-features = false, features = ["clock"]}
config = "0.15"
uuid = {version = "1", features = ["v4"]}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
secrecy = {version = "0.10", features = ["serde"]}
tracing-actix-web = "0.7"
unicode-segmentation = "1"
validator = "0.20"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json","rustls"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
claims = "0.8"
fake = "4.4"
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.9"
wiremock = "0.6"
